--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       padding: 40px 20px;
       text-align: center;
     }
+    nav {
+      text-align: center;
+      background-color: #ddd;
+      padding: 10px 0;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #2c3e50;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
     main {
       padding: 40px 20px;
       max-width: 800px;
@@ -46,6 +60,10 @@
     <h1>Wenxepa Consulting</h1>
     <p>Practical solutions for data-driven organizations</p>
   </header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+  </nav>
   <main>
     <section>
       <h2>👋 About Me</h2>
