--- a/index.html
+++ b/index.html
@@ -71,31 +71,14 @@
     </section>
 
     <section>
-      <h2>🧠 What I Do</h2>
-      <h3>🔹 Data Management & Automation</h3>
+      <h2>🧠 What I Do (Summary)</h2>
       <ul>
-        <li>ETL pipelines and process automation</li>
-        <li>Data integration across cloud and on-prem systems</li>
-        <li>Data migration from legacy platforms</li>
-        <li>Visualization and dashboarding for decision support</li>
+        <li>Data management and automation</li>
+        <li>Custom web and application development (Blazor)</li>
+        <li>Azure AI & semantic search solutions</li>
+        <li>Project consulting and integration</li>
       </ul>
-      <h3>🔹 Application Development</h3>
-      <ul>
-        <li>Full-stack Blazor web application development</li>
-        <li>API development and system integration</li>
-        <li>Secure, responsive front ends with real-time data access</li>
-      </ul>
-      <h3>🔹 Azure AI & Search</h3>
-      <ul>
-        <li>Use of Azure AI Services for text analysis and enrichment</li>
-        <li>Semantic and traditional indexing with Azure Cognitive Search</li>
-        <li>Natural language query interfaces for web applications</li>
-      </ul>
-      <h3>🔹 Project Leadership</h3>
-      <ul>
-        <li>Agile development and stakeholder communication</li>
-        <li>Clear documentation and hand-off for ongoing maintenance</li>
-      </ul>
+      <p>➡️ <a href="services.html">See detailed services</a></p>
     </section>
 
     <section>
