--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <section>
       <h2>💼 Let’s Work Together</h2>
       <p>I’m available for part-time or full-time contract engagements. Whether you need a fast proof of concept or a production-ready solution, I bring thoughtful, well-architected software with clear business value.</p>
-      <p>📧 <strong>Email:</strong> <a href="mailto:yourname@example.com">yourname@example.com</a><br>
-         🌐 <strong>Website:</strong> www.wenxepa.com<br>
-         🔗 <strong>LinkedIn:</strong> linkedin.com/in/yourprofile</p>
+      <p>📧 <strong>Email:</strong> <a href="mailto:yourname@example.com"> WenXepa@gmail.com </a><br>
+         🌐 <strong>Website:</strong> www.WenXepa.com<br>
+         🔗 <strong>LinkedIn:</strong> https://www.linkedin.com/in/carl-graff-72811617/ </p>
     </section>
   </main>
   <footer>
