--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <li>Data management and automation</li>
         <li>Custom web and application development (Blazor)</li>
         <li>Azure AI & semantic search solutions</li>
+        <li>ERP modernization and integration</li>
         <li>Project consulting and integration</li>
       </ul>
       <p>➡️ <a href="services.html">See detailed services</a></p>
