--- a/services.html
+++ b/services.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,6 +80,14 @@
         <li>Azure AI Services for natural language processing</li>
         <li>Semantic and keyword search with Azure Cognitive Search</li>
         <li>Embedding search into internal apps or dashboards</li>
+      </ul>
+    </section>
+    <section>
+      <h2>ERP Modernization & Integration</h2>
+      <ul>
+        <li>Legacy ERP data migration and transformation</li>
+        <li>Integration with financial, manufacturing, or CRM systems</li>
+        <li>Custom reporting, automation, and analytics layers</li>
       </ul>
     </section>
     <section>
